--- a/FrontEnd/register.html
+++ b/FrontEnd/register.html
@@ -12,6 +12,13 @@
       background-size: cover;
       color: white;
     }
+
+    .content{
+      height: 75vh;
+    }
+
+
+
   </style>
 
 </head>
@@ -39,7 +46,7 @@
                 <i class="fa-solid fa-phone-volume"></i>
                 011-2332331<br>
                 <i class="fa-solid fa-envelope"></i>
-                easycar@contact.lk
+                contact@easycar.lk
             </span>
     </div>
   </div>
@@ -47,47 +54,69 @@
 
 <!--LoginForm-->
 
-<div class="container">
+<div class="container content">
   <div class="mt-lg-4 mb-lg-4 reg-content">
   <h1 class="text-warning">Registration Form</h1>
-  <form action="#" method="post" enctype="multipart/form-data">
-    <div class="row">
-      <div class="col-md-6">
-        <div class="mb-3">
-          <label for="name" class="form-label">Name</label>
-          <input type="text" class="form-control" id="name" name="name" required>
+    <form id="fromCustomer">
+      <div class="row">
+        <div class="form-group col-4">
+          <label for="cus_nic">NIC Number:</label>
+          <input type="text" class="form-control" id="cus_nic" name="cus_nic" required>
         </div>
-        <div class="mb-3">
-          <label for="nic" class="form-label">NIC Number</label>
-          <input type="text" class="form-control" id="nic" name="nic" required>
-        </div>
-        <div class="mb-3">
-          <label for="address" class="form-label">Address</label>
-          <textarea class="form-control" id="address" name="address" rows="3" required></textarea>
-        </div>
-        <div class="mb-3">
-          <label for="phone" class="form-label">Phone Number</label>
-          <input type="tel" class="form-control" id="phone" name="phone" required>
+        <div class="form-group col-8">
+          <label for="cus_name">Name:</label>
+          <input type="text" class="form-control" id="cus_name" name="cus_name" required>
         </div>
       </div>
-      <div class="col-md-6">
-        <div class="mb-3">
-          <label for="password" class="form-label">Password</label>
-          <input type="password" class="form-control" id="password" name="password" required>
+
+      <div class="form-group">
+        <label for="cus_address">Address:</label>
+        <input type="text" class="form-control" id="cus_address" name="cus_address" required>
+      </div>
+      <div class="row">
+        <div class="col form-group">
+          <label for="cus_contact">Contact Number:</label>
+          <input type="text" class="form-control" id="cus_contact" name="cus_contact" required>
         </div>
-        <div class="mb-3">
-          <label for="email" class="form-label">Email address</label>
-          <input type="email" class="form-control" id="email" name="email" required>
-        </div>
-        <div class="mb-3">
-          <label for="nic_photo" class="form-label">NIC Photo</label>
-          <input class="form-control" type="file" id="nic_photo" name="nic_photo" accept="image/*" required>
-          <small class="form-text text-muted">Please upload a photo of your NIC or Driving License.</small>
-        </div>
+        <div class="col form-group">
+          <label for="cus_email">Email:</label>
+          <input type="email" class="form-control" id="cus_email" name="cus_email" required>
+        </div></div>
+
+      <div class=" form-group">
+        <label for="cus_img">NIC Image:</label>
+        <input type="file" class="form-control-file" id="cus_img" accept="image/*" required>
+      </div>
+      <button type="button" class="btn btn-success font-weight-bold" id="btnSaveCus" data-toggle="modal" data-target=".bd-example-modal-sm">Save</button>
+    </form>
+  </div>
+</div>
+
+<!--Modal For Login Details-->
+
+<div class="modal fade bd-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-sm">
+    <div class="modal-content bg-dark rounded-lg">
+      <div class="login-form p-lg-4 border border-warning rounded-lg">
+        <form>
+          <p class="text-center text-warning"><Strong>Saved!</Strong><br>Now Enter Login Details</p>
+          <h2 class="text-center">Login</h2>
+          <div class="form-group">
+            <label for="username">Username</label>
+            <input type="text" class="form-control" id="username" aria-describedby="emailHelp" placeholder="Username">
+          </div>
+          <div class="form-group">
+            <label for="password">Password</label>
+            <input type="password" class="form-control" id="password" placeholder="Password">
+          </div>
+          <div class="form-group">
+            <label for="conPassword">Confirm Password</label>
+            <input type="password" class="form-control" id="conPassword" placeholder="Confirm Password">
+          </div>
+          <button type="submit" class="btn btn-warning font-weight-bold">Save</button>
+        </form>
       </div>
     </div>
-    <button type="submit" class="btn btn-warning font-weight-bold">Register</button>
-  </form>
   </div>
 </div>
 
