--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -93,6 +93,13 @@
             color: white;
         }
 
+        .booking-content{
+            background-image: url("assets/images/bg.jpg");
+            background-size: cover;
+            color: white;
+        }
+
+
         .car-cards{
             display: grid;
             grid-template-columns: repeat(4, 1fr);
@@ -221,23 +228,63 @@
 <!--Booking Modal-->
 <div class="modal fade bd-booking-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg">
-        <div class="modal-content">
-            <form>
-                <div class="form-group">
-                    <label for="bk-car">Car</label>
-                    <input type="email" class="form-control" id="bk-car" aria-describedby="emailHelp" placeholder="Enter email">
-                    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+        <div class="booking-content modal-content">
+            <div class="container">
+                <div class="mt-lg-4 mb-lg-4">
+            <h1 class="text-warning">Booking</h1>
+            <form action="#" method="post" enctype="multipart/form-data">
+                <div class="row">
+                    <div class="col-md-3">
+                        <div class="mb-3">
+                            <label for="bk_id" class="form-label">Booking ID</label>
+                            <input type="text" class="form-control" id="bk_id" name="bk_id" required>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="mb-3">
+                            <label for="bk_cusNic" class="form-label">Customer NIC</label>
+                            <input type="text" class="form-control" id="bk_cusNic" name="bk_cusNic" required>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="mb-3">
+                            <label for="bk_cus" class="form-label">Customer Name</label>
+                            <input type="text" class="form-control" id="bk_cus" name="bk_cus" required>
+                        </div>
+                    </div>
+                    </div>
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="mb-3">
+                            <label for="bk_car" class="form-label">Car</label>
+                            <input class="form-control" id="bk_car" name="bk_car" required></input>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="mb-3">
+                            <label for="bk_date" class="form-label">Rent Date</label>
+                            <input type="date" class="form-control" id="bk_date" name="bk_date" required>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="mb-3">
+                            <label for="bk_ndate" class="form-label">End Date</label>
+                            <input type="date" class="form-control" id="bk_ndate" name="bk_ndate" required>
+                        </div>
+                    </div>
+                    </div>
+                <div class="row">
+                    <div class="col-md-3">
+                        <div class="mb-3">
+                            <label for="bk_total" class="form-label">Total Rent for Days - RS:</label>
+                            <input type="text" class="form-control" id="bk_total" name="bk_total" required placeholder="0.00">
+                        </div>
+                    </div>
                 </div>
-                <div class="form-group">
-                    <label for="exampleInputPassword1">Password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-                </div>
-                <div class="form-group form-check">
-                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                    <label class="form-check-label" for="exampleCheck1">Check me out</label>
-                </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="button" class="btn btn-warning font-weight-bold" id="btnBookingSubmit">Submit</button>
             </form>
+            </div>
+            </div>
         </div>
     </div>
 </div>
@@ -287,9 +334,9 @@
 
 <!--CarList-->
 <div class="container-fluid d-flex justify-content-center" id="cars">
-    <div class="mt-4 car-cards">
+    <div class="mt-4 car-cards" id="cardCars">
         <div class=" mb-4">
-            <div class="card">
+            <div class="card" id="KL-1234">
                 <img src="assets/images/Genaral/alto-m/1.png" class="card-img-top" width="100%">
                 <div class="card-body pt-0 px-0">
                     <div class="d-flex flex-row justify-content-between mb-0 px-3 mt-1">
@@ -340,7 +387,7 @@
 <!--        Card 2-->
 
         <div class=" mb-4">
-            <div class="card">
+            <div class="card" id="KA-3232">
                 <img src="assets/images/Genaral/alto-m/2.png" class="card-img-top" width="100%">
                 <div class="card-body pt-0 px-0">
                     <div class="d-flex flex-row justify-content-between mb-0 px-3 mt-1">
@@ -390,7 +437,7 @@
 
 <!--        card 3-->
         <div class=" mb-4">
-            <div class="card">
+            <div class="card" id="ABC-7754">
                 <img src="assets/images/Genaral/alto-m/3.png" class="card-img-top" width="100%">
                 <div class="card-body pt-0 px-0">
                     <div class="d-flex flex-row justify-content-between mb-0 px-3 mt-1">
@@ -476,17 +523,10 @@
                         <div class="d-flex flex-column"><span class="text-muted">Fuel type:</span></div>
                         <div class="d-flex flex-column"><h5 class="mb-0">Petrol</h5></div>
                     </div>
-                    <!--                    <div class="d-flex flex-row justify-content-between p-3 mid">-->
-                    <!--                        <div class="d-flex flex-column"><small class="text-muted mb-1">Daily Range:</small><div class="d-flex flex-row"><img src="https://imgur.com/iPtsG7I.png" width="35px" height="25px"><div class="d-flex flex-column ml-1"><small class="ghj">1.4L MultiAir</small><small class="ghj">16V I-4 Turbo</small></div></div></div>-->
-                    <!--                        <div class="d-flex flex-column"><small class="text-muted mb-2">Monthly Range:</small><div class="d-flex flex-row"><img src="https://imgur.com/J11mEBq.png"><h6 class="ml-1">135 hp&ast;</h6></div></div>-->
-                    <!--                    </div>-->
-                    <!--                    <small class="text-muted key pl-3">Standard key Features</small>-->
                     <div class="mx-3 mt-3 mb-2"><button type="button" class="btnRent btn btn-warning btn-block"><small>Rent</small></button></div>
-                    <!--                    <small class="d-flex justify-content-center text-muted">*Legal Disclaimer</small>-->
                 </div>
             </div>
                 </div>
-
 
         </div>
             </div>
@@ -554,18 +594,83 @@
 </footer>
 
 
+<script src="assets/js/jquery-3.6.1.min.js"></script>
+<script src="assets/js/bootstrap.min.js"></script>
+
+
 <script>
-    $(".btnRent").click(function (){
-        $('.bd-booking-modal-lg').modal();
-    });
+    let baseURL = "http://localhost:8080/BackEnd_war/"
+
+    getCarsForCards();
+    rentModalOpen();
+
+
+    function rentModalOpen(){
+        $(".btnRent").click(function (){
+            $('.bd-booking-modal-lg').modal();
+        });
+    }
+
 
     $("#btnLogin").click(function (){
         $(".login-box").css('display', 'none');
         $("#warningModal").modal();
         $("#txtWarningHeader").text("Success");
         $("#txtWarning").text("Login Successfully");
-
     });
+
+    function getCarsForCards(){
+        $("#cardCars").empty();
+        $.ajax({
+            url: baseURL + "car/allcar",
+            method: 'get',
+            dataType: 'json',
+            success: function (res) {
+                for (let c of res.data) {
+                    let carReg = c.cr_reg;
+                    let carMake = c.cr_make;
+                    let carModel = c.cr_model;
+                    let carType = c.cr_type;
+                    let carFuel = c.cr_fuel;
+                    let carNfp = c.cr_nfp;
+                    let carDay = c.cr_day;
+                    let carMonth = c.cr_month;
+                    let carKm = c.cr_km;
+                    let carAvail = c.cr_avail;
+
+                    if (carType == "General"){
+                        let card ="<div class='mb-4'><div class='card'><img src='assets/images/Genaral/alto-m/4.png' class='card-img-top' width='100%'><div class='card-body pt-0 px-0'><div class='d-flex flex-row justify-content-between mb-0 px-3 mt-1'><div class='d-flex flex-column'><span class='text-muted'>Price Per Day:<br><small class='text-muted'>100KM</small></span></span></div><h6>RS:"+carDay+"/=</h6></div><div class='d-flex flex-row justify-content-between mb-0 px-3'><div class='d-flex flex-column'><span class='text-muted'>Price Per Month:<br><small class='text-muted'>2400KM</small></span></div><h6>RS:"+carMonth+"/=</h6></div><div class='d-flex flex-row justify-content-between mb-0 px-3'><div class='d-flex flex-column'><span class='text-muted'>Price Per extra KM:</span></div><h6>RS:"+carKm+"/=</h6></div><hr class=mt-2 mx-3'><div class='d-flex flex-row justify-content-between px-3'><div class='d-flex flex-column'><span class='text-muted'>Brand:</span></div><div class='d-flex flex-column'><h5 class='mb-0'>"+ carMake +"</h5></div></div><div class='d-flex flex-row justify-content-between px-3'><div class='d-flex flex-column'><span class='text-muted'>Model:</span></div><div class='d-flex flex-column'><h5 class='mb-0'>"+carModel+"</h5></div></div><div class='d-flex flex-row justify-content-between px-3'><div class='d-flex flex-column'><span class='text-muted'>No of passengers:</span></div><div class='d-flex flex-column'><h5 class='mb-0'>"+carNfp+"</h5></div></div><div class='d-flex flex-row justify-content-between px-3'><div class='d-flex flex-column'><span class='text-muted'>Fuel type:</span></div><div class='d-flex flex-column'><h5 class='mb-0'>"+carFuel+"</h5></div></div><div class='mx-3 mt-3 mb-2'><button type='button' class='btnRent btn btn-warning btn-block'><small>Rent</small></button></div></div></div></div>";
+                        $("#cardCars").append(card);
+                    }if (carType == "Premium"){
+                        let card ="<div class='mb-4'><div class='card'><img src='assets/images/Premium/allion/3.png' class='card-img-top' width='100%'><div class='card-body pt-0 px-0'><div class='d-flex flex-row justify-content-between mb-0 px-3 mt-1'><div class='d-flex flex-column'><span class='text-muted'>Price Per Day:<br><small class='text-muted'>100KM</small></span></span></div><h6>RS:"+carDay+"/=</h6></div><div class='d-flex flex-row justify-content-between mb-0 px-3'><div class='d-flex flex-column'><span class='text-muted'>Price Per Month:<br><small class='text-muted'>2400KM</small></span></div><h6>RS:"+carMonth+"/=</h6></div><div class='d-flex flex-row justify-content-between mb-0 px-3'><div class='d-flex flex-column'><span class='text-muted'>Price Per extra KM:</span></div><h6>RS:"+carKm+"/=</h6></div><hr class=mt-2 mx-3'><div class='d-flex flex-row justify-content-between px-3'><div class='d-flex flex-column'><span class='text-muted'>Brand:</span></div><div class='d-flex flex-column'><h5 class='mb-0'>"+ carMake +"</h5></div></div><div class='d-flex flex-row justify-content-between px-3'><div class='d-flex flex-column'><span class='text-muted'>Model:</span></div><div class='d-flex flex-column'><h5 class='mb-0'>"+carModel+"</h5></div></div><div class='d-flex flex-row justify-content-between px-3'><div class='d-flex flex-column'><span class='text-muted'>No of passengers:</span></div><div class='d-flex flex-column'><h5 class='mb-0'>"+carNfp+"</h5></div></div><div class='d-flex flex-row justify-content-between px-3'><div class='d-flex flex-column'><span class='text-muted'>Fuel type:</span></div><div class='d-flex flex-column'><h5 class='mb-0'>"+carFuel+"</h5></div></div><div class='mx-3 mt-3 mb-2'><button type='button' class='btnRent btn btn-warning btn-block'><small>Rent</small></button></div></div></div></div>";
+                        $("#cardCars").append(card);
+                    }if (carType == "Luxury"){
+                        let card ="<div class='mb-4'><div class='card'><img src='assets/images/Luxury/i8/2.png' class='card-img-top' width='100%'><div class='card-body pt-0 px-0'><div class='d-flex flex-row justify-content-between mb-0 px-3 mt-1'><div class='d-flex flex-column'><span class='text-muted'>Price Per Day:<br><small class='text-muted'>100KM</small></span></span></div><h6>RS:"+carDay+"/=</h6></div><div class='d-flex flex-row justify-content-between mb-0 px-3'><div class='d-flex flex-column'><span class='text-muted'>Price Per Month:<br><small class='text-muted'>2400KM</small></span></div><h6>RS:"+carMonth+"/=</h6></div><div class='d-flex flex-row justify-content-between mb-0 px-3'><div class='d-flex flex-column'><span class='text-muted'>Price Per extra KM:</span></div><h6>RS:"+carKm+"/=</h6></div><hr class=mt-2 mx-3'><div class='d-flex flex-row justify-content-between px-3'><div class='d-flex flex-column'><span class='text-muted'>Brand:</span></div><div class='d-flex flex-column'><h5 class='mb-0'>"+ carMake +"</h5></div></div><div class='d-flex flex-row justify-content-between px-3'><div class='d-flex flex-column'><span class='text-muted'>Model:</span></div><div class='d-flex flex-column'><h5 class='mb-0'>"+carModel+"</h5></div></div><div class='d-flex flex-row justify-content-between px-3'><div class='d-flex flex-column'><span class='text-muted'>No of passengers:</span></div><div class='d-flex flex-column'><h5 class='mb-0'>"+carNfp+"</h5></div></div><div class='d-flex flex-row justify-content-between px-3'><div class='d-flex flex-column'><span class='text-muted'>Fuel type:</span></div><div class='d-flex flex-column'><h5 class='mb-0'>"+carFuel+"</h5></div></div><div class='mx-3 mt-3 mb-2'><button type='button' class='btnRent btn btn-warning btn-block'><small>Rent</small></button></div></div></div></div>";
+                        $("#cardCars").append(card);
+                    }
+
+
+
+                }
+                rentModalOpen();
+
+            },
+            error: function (error) {
+                let message = JSON.parse(error.responseText).message;
+                alert(message);
+            }
+        });
+    }
+
+    $("#btnBookingSubmit").click(function (){
+        var startDate = new Date($('#bk_date').val());
+        var endDate = new Date($('#bk_ndate').val());
+
+        var days = Math.floor((endDate.getTime() - startDate.getTime()) / (1000 * 60 * 60 * 24));
+
+        console.log('Number of days between the two dates: ' + days);
+    });
+
 
 </script>
 </body>
